--- a/MobileAccessories/appsettings.json
+++ b/MobileAccessories/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MobileAccessStore_Connection": "Server=LAPTOP-88F3P2E9;Database=DairyFarms_Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MobileAccessStore_Connection": "Server=LAPTOP-88F3P2E9\\SQLEXPRESS;Database=DairyFarms_Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
